# electricity-and-semiconductors-course

./: .gitignore  CLAUDE.md  README.md  background-conversation.md  main.py  matplotlibrc  next-steps.md  pyproject.toml  requirements.txt  shopping-list.md
bonus-labs/: 00-build-an-ac-coupling-circuit.ipynb  01-reconstructing-a-dc-offset.ipynb  01-rms-deep-dive.ipynb  03-powers-of-ten.ipynb  04-intrinsic-carrier-concentration.ipynb
module-00-foundations/: 00-course-introduction.ipynb  00-electrical-fundamentals.ipynb  01-ac-vs-dc-and-signals.ipynb  01-electrical-fundamentals.ipynb  02-ac-vs-dc-and-signals.ipynb
module-01-before-semiconductors/: 00-conductors-insulators-and-the-middle.ipynb  00-prerequisites-review.ipynb  01-conductors-insulators-and-the-middle.ipynb  02-vacuum-tubes-and-the-problem.ipynb
module-02-pn-junctions/: 00-doping-and-the-pn-junction.ipynb  00-prerequisites-review.ipynb  01-diodes-in-practice.ipynb  01-doping-and-the-pn-junction.ipynb  02-diodes-in-practice.ipynb  02-zener-diodes-and-breakdown.ipynb  03-reading-a-diode-datasheet.ipynb  03-zener-diodes-and-breakdown.ipynb  04-reading-a-diode-datasheet.ipynb
module-03-transistors-bjt/: 00-prerequisites-review.ipynb  01-bjt-as-switch-and-amplifier.ipynb  01-how-bjts-work.ipynb  02-bjt-as-switch-and-amplifier.ipynb  03-darlington-pairs.ipynb  04-reading-a-bjt-datasheet.ipynb
module-04-mosfets/: 00-field-effect-transistors.ipynb  01-mosfet-experiments.ipynb  02-mosfet-vs-bjt.ipynb  03-reading-a-mosfet-datasheet.ipynb
module-05-semiconductor-zoo/: 00-optoelectronics.ipynb  02-sensors.ipynb  (+2 more)
(+5 files in other folders)
