[project]
name = "electricity-and-semiconductors-course"
version = "0.1.0"
description = "Electricity & Semiconductors: From Atoms to Datasheets — a self-paced Jupyter notebook course"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "scipy>=1.17.0",
]
